<resources>
    <string name="app_name">Hillfort</string>
    <string name="create_hillfort">Create Hillfort</string>
    <string name="hint_hillfortTitle">Hillfort Title</string>
    <string name="button_addHillfort">Add Hillfort</string>
    <string name="hint_hillfortDescription">Description</string>
    <string name="menu_addHillfort">Add</string>
    <string name="menu_cancelHillfort">Cancel</string>
    <string name="save_hillfort">Save Hillfort</string>
    <string name="button_addImage">Add Image</string>
    <string name="select_hillfort_image">Select Hillfort Image</string>
    <string name="enter_hillfort_title">Please enter a Hillfort Title</string>
    <string name="change_hillfort_image">Change Hillfort image</string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">Sign in</string>
    <string name="splash_screen_text">Hillforts</string>
    <string name="settings">Settings</string>
    <string name="create_account">Create an Account</string>
    <string name="hillfort_list">List of Hillforts</string>
    <string name="edit_hillfort">Edit Hillfort</string>
    <string name="map_view">Map View</string>
    <string name="title_activity_hillfort_maps">Map of All Hillforts</string>
    <string name="title_activity_hillfort_list">Hillforts</string>
    <string name="title_activity_hillfort">Hillfort</string>
    <string name="title_activity_edit_location">Hillfort</string>
</resources>
